ch.1/internet_gateway_create.tf
resource "aws_internet_gateway" "test-igw" {
    vpc_id = aws_vpc.test-vpc.id

    tags = {
      Name = "test-igw"
    }
  
}
